V00-00-01 5-30-07 john@mail.npxdesigns.com:
First version
